// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress render dashboard 295 gapDegree 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 0.3097094374405742px 295.3097094374406px; stroke-dashoffset: -147.5px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -147.5px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -147.5px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress render dashboard 296 gapDegree 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: -0.6902905625594258px 295.3097094374406px; stroke-dashoffset: -148px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -148px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -148px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress render dashboard zero gapDegree 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress render format 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 50%; height: 8px;"
      />
      <div
        class="ant-progress-success-bg"
        style="width: 10%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="50 10"
  >
    50 10
  </span>
</div>
`;

exports[`Progress render negative progress 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 0%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="0%"
  >
    0%
  </span>
</div>
`;

exports[`Progress render negative successPercent 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 50%; height: 8px;"
      />
      <div
        class="ant-progress-success-bg"
        style="width: 0%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="50%"
  >
    50%
  </span>
</div>
`;

exports[`Progress render normal progress 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 0%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="0%"
  >
    0%
  </span>
</div>
`;

exports[`Progress render out-of-range progress 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 100%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
  >
    <span
      aria-label="success-filled"
      class="anticon anticon-success-filled"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="success-filled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm3.15 4.93L7.1 9.98 4.85 7.73a.5.5 0 10-.7.71l2.6 2.6c.19.2.5.2.7 0l4.4-4.4a.5.5 0 00-.7-.71z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Progress render out-of-range progress with info 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 100%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
  >
    <span
      aria-label="success-filled"
      class="anticon anticon-success-filled"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="success-filled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm3.15 4.93L7.1 9.98 4.85 7.73a.5.5 0 10-.7.71l2.6 2.6c.19.2.5.2.7 0l4.4-4.4a.5.5 0 00-.7-.71z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Progress render strokeColor 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: red; stroke-dasharray: 147.6548547187203px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="0"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="50%"
    >
      50%
    </span>
  </div>
</div>
`;

exports[`Progress render strokeColor 2`] = `
<Progress
  percent={50}
  showInfo={true}
  size="default"
  strokeColor={
    Object {
      "from": "#108ee9",
      "to": "#87d068",
    }
  }
  strokeLinecap="round"
  trailColor={null}
  type="line"
>
  <div
    className="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <Line
      percent={50}
      prefixCls="ant-progress"
      showInfo={true}
      size="default"
      strokeColor={
        Object {
          "from": "#108ee9",
          "to": "#87d068",
        }
      }
      strokeLinecap="round"
      trailColor={null}
      type="line"
    >
      <div
        className="ant-progress-outer"
      >
        <div
          className="ant-progress-inner"
        >
          <div
            className="ant-progress-bg"
            style={
              Object {
                "backgroundImage": "linear-gradient(to right, #108ee9, #87d068)",
                "borderRadius": "",
                "height": 8,
                "width": "50%",
              }
            }
          />
        </div>
      </div>
      <span
        className="ant-progress-text"
        title="50%"
      >
        50%
      </span>
    </Line>
  </div>
</Progress>
`;

exports[`Progress render strokeColor 3`] = `
<Progress
  percent={50}
  showInfo={true}
  size="default"
  strokeColor={
    Object {
      "0%": "#108ee9",
      "100%": "#87d068",
    }
  }
  strokeLinecap="round"
  trailColor={null}
  type="line"
>
  <div
    className="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <Line
      percent={50}
      prefixCls="ant-progress"
      showInfo={true}
      size="default"
      strokeColor={
        Object {
          "0%": "#108ee9",
          "100%": "#87d068",
        }
      }
      strokeLinecap="round"
      trailColor={null}
      type="line"
    >
      <div
        className="ant-progress-outer"
      >
        <div
          className="ant-progress-inner"
        >
          <div
            className="ant-progress-bg"
            style={
              Object {
                "backgroundImage": "linear-gradient(to right, #108ee9 0%, #87d068 100%)",
                "borderRadius": "",
                "height": 8,
                "width": "50%",
              }
            }
          />
        </div>
      </div>
      <span
        className="ant-progress-text"
        title="50%"
      >
        50%
      </span>
    </Line>
  </div>
</Progress>
`;

exports[`Progress render successColor progress 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 60%; height: 8px;"
      />
      <div
        class="ant-progress-success-bg"
        style="width: 30%; height: 8px; background-color: rgb(255, 255, 255);"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="60%"
  >
    60%
  </span>
</div>
`;

exports[`Progress render successColor progress type="circle" 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 88.59291283123217px 295.3097094374406px; stroke-dashoffset: -88.59291283123217px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #ffffff; stroke-dasharray: 88.59291283123217px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="60%"
    >
      60%
    </span>
  </div>
</div>
`;

exports[`Progress render successColor progress type="dashboard" 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 220.30970943744057px 295.3097094374406px; stroke-dashoffset: -37.5px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 66.09291283123217px 295.3097094374406px; stroke-dashoffset: -103.59291283123217px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #ffffff; stroke-dasharray: 66.09291283123217px 295.3097094374406px; stroke-dashoffset: -37.5px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="60%"
    >
      60%
    </span>
  </div>
</div>
`;

exports[`Progress render trailColor progress 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
      style="background-color: rgb(255, 255, 255);"
    >
      <div
        class="ant-progress-bg"
        style="width: 0%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="0%"
  >
    0%
  </span>
</div>
`;

exports[`Progress rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default ant-progress-rtl"
>
  <div
    class="ant-progress-outer"
  >
    <div
      class="ant-progress-inner"
    >
      <div
        class="ant-progress-bg"
        style="width: 0%; height: 8px;"
      />
    </div>
  </div>
  <span
    class="ant-progress-text"
    title="0%"
  >
    0%
  </span>
</div>
`;

exports[`Progress should support steps 1`] = `
<div
  class="ant-progress ant-progress-steps ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-steps-outer"
  >
    <div
      class="ant-progress-steps-item"
      style="width: 14px; height: 8px;"
    />
    <div
      class="ant-progress-steps-item"
      style="width: 14px; height: 8px;"
    />
    <div
      class="ant-progress-steps-item"
      style="width: 14px; height: 8px;"
    />
    <span
      class="ant-progress-text"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress steps should have default percent 0 1`] = `
<div
  class="undefined-steps-outer"
/>
`;
